# OONN

./: CMakeLists.txt  NN.h  README.md  file.h  layer.h  layer_matrix.h  layer_simple.h  learnbhv.cpp  learnbhv.h  matrix.h
src/: CMakeLists.txt  NN.h  layer_matrix.h  layer_simple.h  learnbhv.cpp  matrix.h
