SET( PRODUCT_FULL_NAME ${PRODUCT_NAME}-${MAJOR}.${MINOR}.${PATCH} )

FILE(GLOB_RECURSE SOURCE_FILES "*.cpp")
FILE(GLOB_RECURSE HEADER_FILES "*.h")

ADD_EXECUTABLE( ${PRODUCT_FULL_NAME} ${SOURCE_FILES} ${HEADER_FILES})
TARGET_LINK_LIBRARIES( ${PRODUCT_FULL_NAME} ${ALL_LIBS} )

# ################## Create Link ################################################
add_custom_command ( TARGET ${PRODUCT_FULL_NAME}
    POST_BUILD
    COMMAND ln -sf ${PRODUCT_FULL_NAME} ${PRODUCT_NAME} )
